# embeddings-health

./: .gitignore  LOG.md  README.md  literature_review_guide.md  pyproject.toml
code/analyses/: analyses.ipynb  get_data.py
code/embedding_generation/: .gitignore  aggregate.py  composite.py  embed.py  plan.md  pyproject.toml
code/embedding_generation/slurm/: run_ri_test.sh
code/embedding_generation/utils/: cloud_mask.py  cog_writer.py
code/explorations/: embedding_explore.html  embedding_explore.qmd
