[project]
name = "embedding-generation"
version = "0.1.0"
description = "Generate OlmoEarth and Prithvi-EO-2.0 embeddings from Sentinel-2 for CONUS"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Core geospatial
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rioxarray>=0.15",
    # Sentinel-2 data access
    "pystac-client>=0.7",
    "odc-stac>=0.3",
    "planetary-computer>=0.5",
    # ML / inference
    "torch>=2.1",
    "torchvision>=0.16",
    "transformers>=4.40",
    "olmoearth-pretrain>=0.1.0",
    # terratorch is optional; we load Prithvi via transformers trust_remote_code
    # "terratorch>=1.2rc4",
    # Analysis / output
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
    "pandas>=2.0",
    "pyarrow>=14.0",
    # CLI
    "typer>=0.9",
    # Dask for lazy compositing
    "dask[array]>=2024.1",
    "ai2-olmo-core>=2.4.0",
    "class-registry>=2.1.2",
    "setuptools>=82.0.1",
]

[project.scripts]
embed-pipeline = "run:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
managed = true
